# Synapse

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Synapse.cabal  synapse.cabal
src/: Synapse.hs
src/Synapse/: Autograd.hs  LinearAlgebra.hs  ML.hs  NN.hs  Tensors.hs
src/Synapse/LinearAlgebra/: Mat.hs  Vec.hs
src/Synapse/ML/: Layers.hs  Models.hs  Training.hs
src/Synapse/ML/Layers/: Activations.hs  Constraints.hs  Dense.hs  Initializers.hs  Layer.hs  Regularizers.hs
src/Synapse/ML/Training/: Batching.hs  Hyperparameters.hs  LearningRates.hs  Losses.hs  Metrics.hs  Optimisers.hs  Optimizers.hs
src/Synapse/NN/: Batching.hs  Layers.hs  LearningRates.hs  Losses.hs  Metrics.hs  Models.hs  Optimizers.hs  Training.hs
src/Synapse/NN/Layers/: Activations.hs  Constraints.hs  Dense.hs  Initializers.hs  Layer.hs  Regularizers.hs
src/Synapse/NN/Training/: Batching.hs  LearningRates.hs  Losses.hs  Metrics.hs  Optimizers.hs
src/Synapse/Tensors/: Mat.hs  Vec.hs
test/: AutogradTest.hs  LinearAlgebraTest.hs  Main.hs  NNTest.hs  TensorsTest.hs
