cabal-version:      3.0
name:               Synapse
version:            0.1.0.0
build-type:         Simple


author:             JktuJQ
maintainer:         odmamontov@gmail.com


homepage:           https://github.com/JktuJQ/Synapse
extra-doc-files:    README.md
license:            MIT
license-file:       LICENSE


synopsis:
    Synapse is a machine learning library written in pure Haskell.
description:
    Synapse is a machine learning library written in pure Haskell.
category:           Math


common warnings
    ghc-options: -Wall


library
    import:           warnings
    exposed-modules:  Synapse
                    
                      -- Linear algebra
                    , Synapse.LinearAlgebra
                    , Synapse.LinearAlgebra.Mat
                    , Synapse.LinearAlgebra.Vec
                    
                      -- ML
                    , Synapse.ML

                    , Synapse.ML.Layers
                    , Synapse.ML.Layers.Constraints
                    , Synapse.ML.Layers.Initializers
                    , Synapse.ML.Layers.Regularizers

                    , Synapse.ML.Models

                    , Synapse.ML.Training
                    , Synapse.ML.Training.Batching
                    , Synapse.ML.Training.Hyperparameters
                    , Synapse.ML.Training.Losses
                    , Synapse.ML.Training.Metrics
                    , Synapse.ML.Training.Optimisers
                    
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite Synapse-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    build-depends:    base ^>=4.17.2.1
                    , Synapse

                    , HUnit

    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    LinearAlgebraTest
                    , AutogradTest
    -- other-extensions:

