cabal-version:      3.0
name:               Synapse
version:            0.1.0.0
build-type:         Simple


author:             JktuJQ
maintainer:         odmamontov@gmail.com


homepage:           https://github.com/JktuJQ/Synapse
extra-doc-files:    README.md
license:            MIT
license-file:       LICENSE


synopsis:
    Synapse is a machine learning library written in pure Haskell.
description:
    Synapse is a machine learning library written in pure Haskell.
category:           Math


common warnings
    ghc-options: -Wall


library
    import:           warnings
    default-language: Haskell2010

    build-depends:    base ^>=4.17.2.1

                    , vector

                    , hashable
                    , unordered-containers

                    , random

    hs-source-dirs:   src
    exposed-modules:  Synapse
                    
                      -- Tensors
                    , Synapse.Tensors
                    , Synapse.Tensors.Mat
                    , Synapse.Tensors.Vec


                      -- Autograd
                    , Synapse.Autograd
                    

                      -- NN
                    , Synapse.NN

                    , Synapse.NN.Layers
                    , Synapse.NN.Layers.Layer

                    , Synapse.NN.Layers.Initializers
                    , Synapse.NN.Layers.Constraints
                    , Synapse.NN.Layers.Regularizers

                    , Synapse.NN.Layers.Activations
                    , Synapse.NN.Layers.Dense


                    , Synapse.NN.Models


                    , Synapse.NN.Training

                    , Synapse.NN.Training.Batching
                    
                    , Synapse.NN.Training.Losses
                    , Synapse.NN.Training.Metrics

                    , Synapse.NN.Training.LearningRates
                    , Synapse.NN.Training.Optimizers
                    
    -- other-modules:
    -- other-extensions:

test-suite Synapse-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    build-depends:    base ^>=4.17.2.1
                    , Synapse

                    , HUnit

    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    TensorsTest
                    , AutogradTest
    -- other-extensions:

