cabal-version:      3.0
name:               synapse
version:            0.1.0.0
build-type:         Simple


author:             JktuJQ
maintainer:         odmamontov@gmail.com


homepage:           https://github.com/JktuJQ/Synapse
extra-doc-files:    README.md
                  , CHANGELOG.md

license:            MIT
license-file:       LICENSE

synopsis:
    Synapse is a machine learning library written in pure Haskell.
description:
    Synapse is a machine learning library written in pure Haskell, that makes creating and training neural networks an easy job.
category:           Math
 

source-repository head
  type:     git
  location: https://github.com/JktuJQ/Synapse
  subdir:   


common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-language: Haskell2010

    build-depends:    base ^>= 4.17.2.1

                    , vector >= 0.13.2 && < 0.14

                    , hashable >= 1.4.7 && < 1.5
                    , unordered-containers >= 0.2.20 && < 0.3

                    , random >= 1.3.0 && < 1.4

                    , terminal-progress-bar >= 0.4.2 && < 0.5

    hs-source-dirs:   src
    exposed-modules:  Synapse
                    
                      -- Tensors
                    , Synapse.Tensors
                    , Synapse.Tensors.Mat
                    , Synapse.Tensors.Vec


                      -- Autograd
                    , Synapse.Autograd
                    

                      -- NN
                    , Synapse.NN

                    , Synapse.NN.Layers
                    , Synapse.NN.Layers.Layer

                    , Synapse.NN.Layers.Initializers
                    , Synapse.NN.Layers.Constraints
                    , Synapse.NN.Layers.Regularizers

                    , Synapse.NN.Layers.Activations
                    , Synapse.NN.Layers.Dense

                    , Synapse.NN.Models

                    , Synapse.NN.Training

                    , Synapse.NN.Batching
                    
                    , Synapse.NN.Losses
                    , Synapse.NN.Metrics

                    , Synapse.NN.LearningRates

                    , Synapse.NN.Optimizers
                    
    -- other-modules:
    -- other-extensions:

test-suite Synapse-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    build-depends:    base >= 4.0.0.0 && <= 4.21.0.0
                    , synapse

                    , random >= 1.3.0 && < 1.4

                    , HUnit >= 1.6.2 && < 1.7

                    , easyplot >= 1.0 && < 1.1

    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    TensorsTest
                    , AutogradTest
                    , NNTest
    -- other-extensions:
